Add "Random Choice" button on collections page

--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+{% block modal %}{% endblock %}
 <div class="container-fluid pb-5">
     <h1 class="text-center"><a href="{% url 'index' %}" id="banner-link-index">
         <img id="banner" src="{% static 'mapsapp/images/banner.svg' %}"/></a>
