--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -19,6 +19,7 @@
                     <li>Read this very informative page</li>
                     <li>Browse, view and download maps (<code>.rms</code> files)</li>
                     <li>Browse and download map collections</li>
+                    <li>Have a random map selected for you from a collection</li>
                     <li>Search for maps or authors by name</li>
                     <li>Use the Mappack Creator to create mappacks (a mappack is a single <code>.rms</code> file that
                         generates one of multiple maps randomly with approximately equal probability)
