Update info page

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -36,6 +36,9 @@
                     <li>Upload new versions of your maps (the old map will display a link to the newer version, while
                         all collections will directly include the new map)
                     </li>
+                    <li>Remove/archive your maps so they are not available anymore except via their direct url or if
+                        they are still part of a collection
+                    </li>
                     <li>Create map collections</li>
                     <li>Edit your map collections</li>
                     <li>Express your affection towards a map by clicking the <span class="heart">❤</span> button</li>
@@ -66,10 +69,10 @@
                     </li>
                     <li>The regular "New Map" dialog appears, but some fields are already filled out (like "Name",
                         "Authors" or "Description") – they contain the values from the old map for your convenience.
-                        Select the new <code>.rms</code> file
-                        <a href="https://github.com/SiegeEngineers/aoe2map/issues/15">and&nbsp;new&nbsp;images</a>,
-                        fill in or edit the values in the remaining input fields ("Version" and
-                        "Changelog" might be especially interesting here) and click "Upload" – and you are all set!
+                        Select the new <code>.rms</code> file and&nbsp;new&nbsp;images and/or select images from the
+                        previous version that you wish to copy over, fill in or edit the values in the remaining input
+                        fields ("Version" and "Changelog" might be especially interesting here) and click "Upload" – and
+                        you are all set!
                     </li>
                     <li>The new version is now available on the website.</li>
                     <li>In all collections, your own and those of others, the old version got replaced with the new
