--- a/mapsapp/templates/mapsapp/collection.html
+++ b/mapsapp/templates/mapsapp/collection.html
@@ -38,6 +38,9 @@
     <hr>
     <div class="col-md-6 offset-md-3 col-12">
         <div class="markdown-text">{{ collection.description }}</div>
+        {% if request.user and request.user.is_staff %}
+            <div class="text-muted">Created by: <code>{{ collection.owner.username }}</code></div>
+        {% endif %}
         <p class="text-center">
             <button class="btn btn-secondary" id="download">Download Collection</button>
             <button class="btn btn-secondary roll-random-item" id="random_choice">Random Choice</button>
