--- a/mapsapp/templates/mapsapp/collection.html
+++ b/mapsapp/templates/mapsapp/collection.html
@@ -37,10 +37,7 @@
     </h4>
     <hr>
     <div class="col-md-6 offset-md-3 col-12">
-        <div class="markdown-text">{{ collection.description }}</div>
-        {% if request.user and request.user.is_staff %}
-            <div class="text-muted">Created by: <code>{{ collection.owner.username }}</code></div>
-        {% endif %}
+        <p class="markdown-text">{{ collection.description }}</p>
         <p class="text-center">
             <button class="btn btn-secondary" id="download">Download Collection</button>
             <button class="btn btn-secondary roll-random-item" id="random_choice">Random Choice</button>
@@ -50,6 +47,8 @@
                    class="card-link btn btn-outline-primary ml-3">Edit collection</a>
             {% endif %}
         </p>
+        <p class="text-muted text-center small">This collection is managed by: <span
+                            class="text-monospace">{{ collection.owner.username }}</span></p>
     </div>
 {% endblock %}
 
