Extend info page with custom map versions information

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -18,6 +18,7 @@
                 <ul>
                     <li>Read this very informative page</li>
                     <li>Browse, view and download maps (<code>.rms</code> files)</li>
+                    <li>Download modified versions of maps (for example a Sudden Death version for UserPatch)</li>
                     <li>Browse and download map collections</li>
                     <li>Have a random map selected for you from a collection</li>
                     <li>Search for maps or authors by name</li>
