Add rms path for DE to info

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -91,6 +91,11 @@
                     from this site in the following folder:</p>
 
                 <dl class="list-group list-group-flush">
+                    <dt>DE</dt>
+                    <dd>
+                        <code>C:\Program Files
+                            (x86)\Steam\steamapps\common\AoE2DE\resources\_common\random-map-scripts</code>
+                    </dd>
                     <dt>HD</dt>
                     <dd>
                         <code>C:\Program Files
