--- a/mapsapp/templates/mapsapp/map_archive.html
+++ b/mapsapp/templates/mapsapp/map_archive.html
@@ -16,7 +16,7 @@
                 <li>The map will no longer show up in your list of your own maps.</li>
                 <li>Nobody will be able to add the map to collections.</li>
                 <li>You will no longer be able to edit the map.</li>
-                <li>Users will no longer be able to express their arrection towards the map.</li>
+                <li>Users will no longer be able to express their affection towards the map.</li>
                 <li><strong>You will not be able to remove the "archived" status from your map again.</strong></li>
             </ul>
             <p>However:</p>
