Add 256x tech for DE download option

--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -136,11 +136,14 @@
                                 <button class="dropdown-item" id="deModButton">Download ZIP for DE mod</button>
                                 <button class="dropdown-item" id="wkVooblyModButton">Download ZIP for WK Voobly mod
                                 </button>
+                                <button class="dropdown-item" id="256xTechButton">
+                                    256x tech version (DE)
+                                </button>
                                 <button class="dropdown-item" id="suddenDeathButton">
-                                    Sudden Death version
+                                    Sudden Death version (UP)
                                 </button>
                                 <button class="dropdown-item" id="explodingVillagersButton">
-                                    Exploding Villagers version
+                                    Exploding Villagers version (UP)
                                 </button>
                             </div>
                         </div>
