Add custom download options to main page and search results

--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'mapsapp/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'mapsapp/css/railscasts.css' %}">
     <link rel="stylesheet" href="{% static 'mapsapp/css/aoe2map.css' %}">
     {% block additionalcss %}
     {% endblock %}
