Add contests to navigation

--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -38,6 +38,19 @@
         <li class="nav-item">
             <a class="nav-link" href="https://snippets.aoe2map.net" id="nav-link-snippets">Snippets</a>
         </li>
+        <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
+                Contests
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="https://aoe2map.net/contest/holy-cup/">Holy Cup (2021)</a>
+                <a class="dropdown-item" href="https://aoe2map.net/contest/wdc/">World Desert Championship (2021)</a>
+                <a class="dropdown-item" href="https://aoe2map.net/contest/masters-of-rms/">Masters of RMS (2020)</a>
+                <a class="dropdown-item" href="https://aoe2map.net/contest/">24 Hours
+                    1&thinsp;/&thinsp;2&thinsp;/&thinsp;3 (2018)</a>
+            </div>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'info' %}" id="nav-link-info">Info</a>
         </li>
